Using sibling selectors to ensure there is a gap between two paragraphs Converting more fonts to em over px

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -31,6 +31,9 @@ h4,
 p {
   margin-bottom: 0em;
 }
+p + p {
+  margin-top: 1em;
+}
 h1,
 .post-meta {
   text-align: center;
@@ -47,12 +50,18 @@ a:hover {
   color: #02090e;
 }
 p,
+h3,
 li,
 dt,
 dd {
-  font-size: 18px;
+  font-size: 1.2em;
+  line-height: 150%;
+}
+p,
+li,
+dt,
+dd {
   font-weight: 100;
-  line-height: 30px;
 }
 dt {
   font-weight: 400;
